# rdna_stack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  design.md  setup.py
.github/workflows/: ci.yml
examples/: basic_usage.py
include/rdna/: device.h  hip_stub.h  kernels.h  memory.h  profiler.h  utils.h
python/: CMakeLists.txt  __init__.py  device_bindings.cpp  kernel_bindings.cpp  memory_bindings.cpp  rdna_module.cpp  utils_bindings.cpp
pytorch/: rdna_backend.cpp
src/: CMakeLists.txt  device.cpp  kernels.cpp  memory.cpp  profiler.cpp  utils.cpp
tensorflow/: rdna_device.cc
tests/: test_basic.py
